<?xml version="1.0"?>
<package format="2">
  <name>vdb_mapping_ros</name>
  <version>0.1.0</version>
  <description>The vdb_mapping_ros package</description>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>

  <license>Apache-2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vdb_mapping_ros</url> -->

  <author email="grosse@fzi.de">Marvin Große Besselmann</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_sensor_msgs</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <depend>vdb_mapping</depend>

  <export>

  </export>
</package>
