<?xml version="1.0"?>
<package format="2">
  <name>vdb_mapping_ros</name>
  <version>0.1.0</version>
  <description>The vdb_mapping_ros package is a ROS wrapper for the vdb_mapping package used for fast volumetric mapping.</description>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>

  <license>Apache-2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vdb_mapping_ros</url> -->

  <author email="grosse@fzi.de">Marvin Große Besselmann</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>vdb_mapping</depend>
  <depend>vdb_mapping_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>

  </export>
</package>
